<resources>
    <string name="app_name">instagram</string>
    <string name="profile_nama">RIZKI GUSMIANTO</string>
    <string name="profile_post_count">500</string>
    <string name="profile_post">Postingan</string>
    <string name="profile_follower_count">9000</string>
    <string name="profile_pengikut">Pengikut</string>
    <string name="profile_following_count">150</string>
    <string name="profile_mengikuti">Mengikuti</string>
    <string name="profile_content1">Musisi</string>
    <string name="profile_content2">Teknik Informatika</string>
    <string name="profile_follow_button">Ikuti</string>
    <string name="profile_send_button">Kirim Pesan</string>
</resources>